# qwen3-tts-studio-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-commit-message-instructions.md
app/: main.py
app/routers/: voices.py
app/schemas/: voices.py
app/services/: __init__.py  voice_clone.py  voice_generate.py
app/tts/: model.py
app/utils/: audio.py
docs/: installation.md
